--- a/BlogSpace/index.html
+++ b/BlogSpace/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+    <link rel="stylesheet" href="index.css">
+</head>
 <body>
-
+    <nav>
+        <h3>BlogSpace</h3>
+    </nav>
     <div id="root"></div>
     <script src="index.js"></script>
 </body>
