--- a/BlogSpace/index.html
+++ b/BlogSpace/index.html
@@ -9,6 +9,13 @@
     <nav>
         <h3>BlogSpace</h3>
     </nav>
+    <form id="formData">
+        <label for="post-title">Title:</label>
+        <input id="post-title" type="text">
+        <label for="post-body">Body:</label>
+        <textarea id="post-body"></textarea>
+        <button>Post</button>
+    </form>
     <div id="root"></div>
     <script src="index.js"></script>
 </body>
